[gd_scene load_steps=8 format=2]

[ext_resource path="res://tileset_grass_green.png" type="Texture" id=1]
[ext_resource path="res://scripts/Items/GlassItem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2.46668, 2.51962 )

[sub_resource type="CircleShape2D" id=5]
radius = 12.0416

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "pause"
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="GlassItem" type="KinematicBody2D" groups=["glass", "item"]]
collision_layer = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 137, 69, 15, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 0 )
rotation = 0.905575
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/pause = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
